# spa

./: .clang-format  .gitignore  README.md  \  check-submission.py  new
Team12/Code12/: CMakeLists.txt  Contact.csv  doxyfile  doxyfile.bak  tests - Shortcut.lnk
Team12/Code12/cmake/: FindAutotester.cmake
Team12/Code12/docs/: api.adoc
Team12/Code12/scripts/: benchmark.py  enumerate-test-cases.cpp  format.sh  generate-testcases.py  run-specific-test.sh  run-tests-windows.sh  run-tests.sh  time-stress-tests.sh
Team12/Code12/src/autotester/: CMakeLists.txt
Team12/Code12/src/autotester/src/: TestWrapper.cpp  TestWrapper.h
Team12/Code12/src/autotester_gui/: CMakeLists.txt
Team12/Code12/src/autotester_gui/src/: GUIWrapper.cpp  mainwindow.ui
Team12/Code12/src/integration_testing/: CMakeLists.txt
Team12/Code12/src/integration_testing/src/: Frontend_Pkb_Follows_Test.cpp  Frontend_Pkb_Modifies_Test.cpp  Frontend_Pkb_Parent_Test.cpp  Frontend_Pkb_Tables_Test.cpp  Frontend_Pkb_Uses_Test.cpp  Pql_Pkb_Test.cpp  TestFrontEnd.cpp  Utils.cpp  Utils.h
Team12/Code12/src/spa/: CMakeLists.txt
Team12/Code12/src/spa/src/: DesignExtractor.cpp  Error.h  FrontendManager.h  PKB.cpp  PKB.h  Parser.cpp  TNode.h  Types.h  Ui.h  Util.cpp  Util.h
Team12/Code12/src/spa/src/ast/: AstLibrary.cpp  AstLibrary.h  AstTypes.cpp  AstTypes.h
Team12/Code12/src/spa/src/cfg/: CfgBipBuilder.cpp  CfgBipBuilder.h  CfgBuilder.cpp  CfgBuilder.h  CfgTypes.cpp  CfgTypes.h
Team12/Code12/src/spa/src/error/: InputError.cpp  InputError.h
Team12/Code12/src/spa/src/frontend/: FrontendManager.cpp  FrontendManager.h
Team12/Code12/src/spa/src/frontend/designExtractor/: CallsExtractor.cpp  CallsExtractor.h  DesignExtractor.cpp  DesignExtractor.h  FollowsExtractor.cpp  FollowsExtractor.h  ModifiesExtractor.cpp  ModifiesExtractor.h  NextExtractor.cpp  NextExtractor.h  ParentExtractor.cpp  ParentExtractor.h  SemanticErrorsValidator.cpp  SemanticErrorsValidator.h  UsesExtractor.cpp  UsesExtractor.h
Team12/Code12/src/spa/src/frontend/parser/: ErrorMessages.cpp  Parser.cpp  Parser.h  StringMatcher.cpp  StringMatcher.h  StringMatcher_Impl.h  Token.cpp  Token.h
Team12/Code12/src/spa/src/lexer/: Lexer.cpp  Lexer.h
Team12/Code12/src/spa/src/pkb/: PKB.cpp  PKB.h  PKBUtils.cpp  PKBUtils.h  PkbTypes.h
Team12/Code12/src/spa/src/pkb/relationships/: Calls.cpp  Calls.h  Follows.cpp  Follows.h  Modifies.cpp  Modifies.h  Next.cpp  Next.h  NextBip.cpp  NextBip.h  Parent.cpp  Parent.h  Uses.cpp  Uses.h  UsesTable.cpp
Team12/Code12/src/spa/src/pkb/tables/: Tables.cpp  Tables.h
Team12/Code12/src/spa/src/pkb/tree/: TreeStore.cpp  TreeStore.h
Team12/Code12/src/spa/src/pql/: AqTypes.cpp  AqTypes.h  Evaluator.cpp  Evaluator.h  FormattedQueryResult.cpp  FormattedQueryResult.h  PqlManager.cpp  PqlManager.h  PreProcessor.cpp  PreProcessor.h  Projector.cpp  Projector.h  QueryResultFormatType.h  RawQueryResult.cpp  RawQueryResult.h
Team12/Code12/src/spa/src/pql/evaluator/: Evaluator.cpp  Evaluator.h  EvaluatorUtils.cpp  EvaluatorUtils.h  PatternMatcher.cpp  PatternMatcher.h  RelationshipsGraph.cpp  ResultsTable.cpp  ResultsTable.h  SuchThatEvaluator.cpp  SuchThatEvaluator.h
Team12/Code12/src/spa/src/pql/optimiser/: ClauseGroupSorter.cpp  ClauseGroupSorter.h  GroupedClauses.cpp  GroupedClauses.h  Optimiser.cpp  Optimiser.h  OptimiserUtils.cpp  OptimiserUtils.h
Team12/Code12/src/spa/src/pql/parser/: AqTypes.cpp  AqTypes.h  Preprocessor.cpp  Preprocessor.h
Team12/Code12/src/spa/src/pql/preprocessor/: AbstractQuery.cpp  AbstractQuery.h  AqTypes.cpp  AqTypes.h  AqTypesUtil.cpp  AqTypesUtils.cpp  AqTypesUtils.h  Attribute.cpp  Attribute.h  Clause.cpp  Clause.h  ClauseVector.cpp  ClauseVector.h  DeclarationTable.cpp  DeclarationTable.h  DesignEntity.cpp  DesignEntity.h  DesignEntityType.h  Errorable.cpp  Errorable.h  ExpressionSpec.cpp  ExpressionSpec.h  PatternClause.cpp  PatternClause.h  Preprocessor.cpp  Preprocessor.h  QueryError.cpp  QueryError.h  QueryErrorType.h  Reference.cpp  Reference.h  Relationship.cpp  Relationship.h  ResultSynonym.cpp  ResultSynonym.h  ResultSynonymVector.cpp  ResultSynonymVector.h  SuchThatClause.cpp  SuchThatClause.h  WithClause.cpp  (+1 more)
Team12/Code12/src/spa/src/pql/projector/: FormattedQueryResult.cpp  FormattedQueryResult.h  Projector.cpp  Projector.h  QueryResultFormatType.h  RawQueryResult.cpp  RawQueryResult.h  RawResultFromClause.cpp  RawResultFromClause.h  RawResultFromClauses.cpp  RawResultFromClauses.h  ReducedRawQueryResult.h
Team12/Code12/src/spa/src/tables/: Tables.h
Team12/Code12/src/spa_cmdline/: CMakeLists.txt
Team12/Code12/src/spa_cmdline/src/: main.cpp
Team12/Code12/src/unit_testing/: CMakeLists.txt
Team12/Code12/src/unit_testing/src/: Ast_Test.cpp  DesignExtractor_Test.cpp  Design_Extractor_Test.cpp  FollowsExtractor_Test.cpp  Lexer_Test.cpp  ModifiesExtractor_Test.cpp  ParentExtractor_Test.cpp  Parser_Test.cpp  Pkb_Test.cpp  TestAST.cpp  UsesExtractor_Test.cpp  main.cpp
Team12/Code12/src/unit_testing/src/ast_utils/: AstUtils.cpp  AstUtils.h
Team12/Code12/src/unit_testing/src/cfg/: CfgBipBuilder_Test.cpp  CfgBuilder_Test.cpp
Team12/Code12/src/unit_testing/src/cfg_utils/: CfgUtils.cpp  CfgUtils.h  CfgUtils_Program28_Test.cpp
Team12/Code12/src/unit_testing/src/frontend/designExtractor/: CallsExtractor_Test.cpp  FollowsExtractor_Test.cpp  ModifiesExtractor_Test.cpp  NextExtractor_Test.cpp  ParentExtractor_Test.cpp  SemanticErrorValidator_Test.cpp  UsesExtractor_Test.cpp
Team12/Code12/src/unit_testing/src/frontend/parser/: Parser_Test.cpp
Team12/Code12/src/unit_testing/src/pkb/relationships/: Follows_Test.cpp  Modifies_Test.cpp  Parent_Test.cpp  Uses_Test.cpp
Team12/Code12/src/unit_testing/src/pkb/tables/: Tables_Test.cpp
Team12/Code12/src/unit_testing/src/pql/: TestPreProcessor.cpp
Team12/Code12/src/unit_testing/src/pql/evaluator/: Evaluator_Test.cpp  (+11 more)
Team12/Code12/tests/: Sample_queries_basicQueries.txt  Sample_queries_modifiesQueries.txt  Sample_queries_parentQueries.txt  analysis.xsl  complexQueries2.txt  complexQueries3.txt  complexSource2.txt  out.xml
(+204 files in other folders)
